--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dexie": "^4.2.0",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "next-pwa": "^5.6.0",
