--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.543.0",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
