feat/fix: change splash screen for app and use in manifest and layout files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "INDI Ouro",
   "short_name": "INDI Ouro",
-  "start_url": "/",
+  "start_url": "/splash.html",
   "display": "standalone",
   "lang": "pt-BR",
   "description": "Gerencie o rebanho, pesos e vacinas da fazenda — mesmo offline.",
