feat(offline): migrate from SQLite to Dexie for offline data storage
refactor(db): replace SQLite adapter with Dexie implementation
feat(sync): implement offline-first sync with service worker
feat(matriz): add matriz details page and related components
style(ui): update theme colors and logo handling
perf(db): improve query performance with indexedDB
chore(deps): add dexie and @types/dexie dependencies

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "background_color": "#1162ae",
-  "theme_color": "#1162ae",
+  "background_color": "#2563eb",
+  "theme_color": "#2563eb",
   "description": "Gerencie o rebanho, pesos e vacinas da fazenda — mesmo offline.",
   "icons": [
     {
@@ -22,9 +22,9 @@
     },
     {
       "src": "/logo.svg",
-      "sizes": "512x512",
+      "sizes": "any",
       "type": "image/svg+xml",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ]
 }
