--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "next dev --turbopack",
+    "build": "npm run build:sw && next build --turbopack",
+    "build:sw": "npx esbuild src/sw/service-worker.ts --bundle --outfile=public/sw.js --minify",
+    "start": "next start"
   },
   "dependencies": {
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -21,17 +23,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "dexie": "^3.2.7",
     "framer-motion": "^12.23.22",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.543.0",
     "motion": "^12.23.24",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "recharts": "^2.15.4",
-    "sql.js": "^1.10.0",
+    "rxdb": "^16.20.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
     "uuid": "^13.0.0",
