--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,21 @@
 {
   "name": "INDI Ouro",
   "short_name": "INDI Ouro",
+  "description": "Gerencie o rebanho, pesos e vacinas da fazenda — mesmo offline.",
   "start_url": "/",
   "display": "standalone",
-  "scope": "/",
-  "background_color": "#2563eb",
-  "theme_color": "#2563eb",
-  "description": "Gerencie o rebanho, pesos e vacinas da fazenda — mesmo offline.",
+  "background_color": "#ffffff",
+  "theme_color": "#1162ae",
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/logo.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
