--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,63 @@
 {
   "name": "INDI Ouro",
   "short_name": "INDI Ouro",
-  "start_url": "/",
-  "display": "standalone",
+  "description": "Gerencie o rebanho, pesos e vacinas da fazenda — mesmo offline.",
+  "start_url": "/home",
   "scope": "/",
+  "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#1162ae",
   "theme_color": "#1162ae",
-  "description": "Gerencie o rebanho, pesos e vacinas da fazenda — mesmo offline.",
+  "categories": ["business", "productivity"],
+  "lang": "pt-BR",
+  "dir": "ltr",
   "icons": [
     {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
       "src": "/logo.svg",
-      "sizes": "512x512",
+      "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any"
+    },
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-maskable-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-maskable-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Ver Animais",
+      "short_name": "Animais",
+      "description": "Lista de animais cadastrados",
+      "url": "/bois",
+      "icons": [{ "src": "/logo.svg", "sizes": "any" }]
+    },
+    {
+      "name": "Cadastrar Animal",
+      "short_name": "Cadastro",
+      "description": "Cadastrar novo animal",
+      "url": "/cadastro",
+      "icons": [{ "src": "/logo.svg", "sizes": "any" }]
     }
   ]
 }
