feat: introduce comprehensive animal listing and detail pages with PWA offline support and dynamic route caching.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -49,7 +49,7 @@
       "name": "Ver Animais",
       "short_name": "Animais",
       "description": "Lista de animais cadastrados",
-      "url": "/bois",
+      "url": "/animals",
       "icons": [{ "src": "/logo.svg", "sizes": "any" }]
     },
     {
