--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,46 +12,15 @@
   "lang": "pt-BR",
   "dir": "ltr",
   "icons": [
+  
+
     {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
+      "src": "/logo.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "any"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
-  "screenshots": [],
-  "shortcuts": [
-    {
-      "name": "Ver Animais",
-      "short_name": "Animais",
-      "description": "Lista de animais cadastrados",
-      "url": "/animals",
-      "icons": [{ "src": "/logo.svg", "sizes": "any" }]
-    },
-    {
-      "name": "Cadastrar Animal",
-      "short_name": "Cadastro",
-      "description": "Cadastrar novo animal",
-      "url": "/cadastro",
-      "icons": [{ "src": "/logo.svg", "sizes": "any" }]
-    }
-  ]
+  "screenshots": []
+
 }
