--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "npm run build:sw && next build --turbopack",
     "build:sw": "npx esbuild src/sw/service-worker.ts --bundle --outfile=public/sw.js --minify",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@capacitor/cli": "^7.4.4",
@@ -44,17 +49,24 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/dexie": "^1.3.32",
     "@types/node": "^20",
     "@types/pdfmake": "^0.2.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sql.js": "^1.0.6",
+    "@vitejs/plugin-react": "^5.1.2",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "jsdom": "^27.4.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   }
 }
