--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
     "uuid": "^13.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
