--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "lucide-react": "^0.543.0",
     "motion": "^12.23.24",
     "next": "^16.0.8",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "recharts": "^2.15.4",
     "rxdb": "^16.20.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
     "uuid": "^13.0.0",
