--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.1",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.1",
     "recharts": "^2.15.4",
     "rxdb": "^16.20.0",
